--- a/appsettings.json
+++ b/appsettings.json
@@ -11,5 +11,8 @@
     "secret": "This is a secret key",
     "audience": "vijoy",
     "issuer": "vijoy"
+  },
+  "ConnectionStrings": {
+    "myconn": "server=ATS-2020-3; database=JWT_AUTHENTICATION_TEST;Trusted_Connection=True;"
   }
 }
